--- a/static/style.css
+++ b/static/style.css
@@ -69,7 +69,7 @@ header {
 
 
 /*Remove header on mobile*/
-@media screen and (max-width: 600px) {
+@media only screen and (max-width: 600px) {
     header {
         display:none;
     }
