--- a/static/style.css
+++ b/static/style.css
@@ -2,6 +2,7 @@ body {
     /*font-family: 'Verdana', sans-serif;*/
     margin: 50px 25px;
     background:#fff;
+
 }
 
 a {
@@ -134,6 +135,12 @@ div.page img {
     max-width:90%;
 }
 
+div.page video {
+    margin:20px;
+    width:900px;
+    max-width:90%;
+
+}
 
 
 div.page p {
