--- a/static/style.css
+++ b/static/style.css
@@ -1,12 +1,13 @@
 body {
-    /*font-family: 'Verdana', sans-serif;*/
-    margin: 50px 25px;
+    font-family: 'Roboto', sans-serif;
+    font-size:14px;
+    margin: 20px 25px;
     background:#fff;
 
 }
 
 a {
-    /*color: #2a99b6;*/
+    color: #4D4DFF;
 }
 
 a:hover {
@@ -106,6 +107,8 @@ header nav ul {
     list-style: none;
     margin: 0;
     padding: 0;
+    line-height:20px;
+    padding-left:15px;
 }
 
 header nav ul li {
@@ -178,7 +181,7 @@ div.page sub, sup { line-height: 0.1em; }
 
 .project{
     break-inside: avoid;
-    background: #f1fbfe;
+    background: #f3f3f3;
     max-width:370px;
     margin:10px;
     -webkit-box-shadow: 7px 11px 34px 0px rgba(0,0,0,0.59);
@@ -216,9 +219,11 @@ p.meta {
     margin-top:5px;
 }
 div#info{
-    background:#f1fbfe;
+    background:#f3f3f3;
     padding:10px;
-
+    border-style: solid;
+    border-color:#4D4DFF;
+    border-width:2px;
 }
 
 div#right{
